# notionpm

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  full-properties.json  pyproject.toml
.github/workflows/: deploy.yml
app/: aiogram_webhook.py  api.py  config.py  dispatcher.py  generated.py  initializer.py  jobs.py  middleware.py  notifications.py  notion.py  notion_login.py  notion_oauth.py  routes.py  search_example.py  server.py  service.py  setup.py  storage.py  track.py
app/commands/: abstract.py  choose_database.py  choose_properties.py  common.py  connect.py  connect_notion.py  continuous.py  set_notifications.py  start.py  toggle_notifications.py
app/notion_examples/: database_pages_example.py  db_query_example.py  test_block_content.json  test_response_page_content.json  test_response_pages_list.json
app/tracker/: compose_message.py  entities.py  track.py
v0_1/: notion_oauth.py  tracker.py
