[tool.poetry]
name = "notion"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.2"
python-dotenv = "1.0.0"
notion-client = "2.0.0"
aiogram = "2.25.1"
aiohttp = "3.8.4"
redis = "4.5.4"
rocketry = "2.5.1"
aiohttp-cors = "0.7.0"
sentry-sdk = "^1.24.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
